--- a/profile.html
+++ b/profile.html
@@ -1,74 +1,64 @@
 <!DOCTYPE html>
-    <html>
-        <head>
-            <title>Profile</title>
-            <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
-            <link rel="stylesheet" type="text/css" href="stylesheet.css">
-            <link rel="icon" type="image/png" href="images/favicon.png">
-            <style>
-            .row {
-                display: flex;
-            }
-            .column {
-                flex: 33.33%;
-                padding: 10px;
-            }
-            .border {
-                border-radius: 10px;
-            }
-            .p-intro {
-            text-align: center;
-            font-size: 20px;
-            }
-            .intro {
-            font-size: 20px;
-            padding-left: 23%;
-            }
-            </style>
-        </head>
-        <body>
-            <h1 class="header">Profile page</h1>
-            <ul class="navbar"> 
-                <li><a href="index.html">Home page</a></li>
-                <li><a class="active" href="profile.html">Profile page</a></li>
-                <li><a href="dashboard.html">Dashboard</a></li>
-                <li><a href="faq.html">Frequently Asked Questions (FAQ)</a></li>
-                <li><a href="motivation.html">My Motivation</a></li>
-            </ul> 
-            <h2 class="p-intro">Who am I?</h2>
-            <pre class="intro">
-                My name is Stefan, I am 23 years old. I currently live at home with my parents in Middelburg.
-                My hobbies and interests fluctuate often, although I have always liked football (Feyenoord!).
-                I have some expierence with application development though very little.
-                I finished my teacher's assistant education and last school year tried to go for a primary education degree.
-            </pre>
-            <h2 class="p-intro">The HBO level suits me because:</h2>
-            <pre class="intro">
-                I like working independently and in a team. I'm motivated to finish this education and work a career in ICT.
-                I'd like to create something to help the education sector, altough I'm not sure what that would be at this moment.
-            </pre>
-            <h2 class="p-intro">The study programme suits me because:</h2>
-            <pre class="intro">
-                Interest in coding and being a system administrator. Ambitious about my future in this job field.
-            </pre>
-            <div class="row">
-                <div class="column">
-                    <img class="border" src="/sgeissler-repo/images/feyenoord-stadion-de-kuip.jpg" alt="De Kuip" style="width:100%; height: 450px">
-                </div>
-                <div class="column">
-                    <img class="border" src="/sgeissler-repo/images/bergen.jpg" alt="Bergen op Zoom" style="width: 100%; height: 450px">
-                </div>
-                <div class="column">
-                    <img class="border" src="/sgeissler-repo/images/stock-teacher.jpg" alt="Teacher" style="width: 100%; height: 450px">
-                </div>
+<html lang="en">
+
+<head>
+    <title>Profile page</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="assets/css/styles.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto&display=swap">
+</head>
+
+<body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-navbar">
+        <a class="navbar-brand" href="/">
+            <img src="assets/images/logo.png" style="height: 36px; width: 36px;">
+        </a>
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="index.html">Landing page</a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="profile.html">Profile page</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="dashboard.html">Dashboard</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="faq.html">FAQ</a>
+            </li>
+        </ul>
+        </div>
+    </nav>
+    <div class="container my-4">
+        <div class="row">
+            <div class="col-sm-6 ">
+                <h4>Who am I?</h4>
+                <p>My name is Stefan, I am 23 years old. I currently live at home with my parents in Middelburg.
+                    My hobbies and interests fluctuate often, although I have always liked football (Feyenoord!).
+                    I have some expierence with application development though very little.
+                    I finished my teacher's assistant education and last school year tried to go for a primary education
+                    degree.</p>
             </div>
-              
-            <h2 class="p-intro">Some character traits to describe myself:</h2> 
-            <ul class="intro" style="padding-left: 30%";>
-                <li>Fairness</li>
-                <li>Patience</li>
-                <li>Sense of humour</li>
-                <li>Persistence</li>
-             </ul>
-            </body>
-    </html>
+            <div class="col-sm-6">
+                <h4>Characteristics that fit me:</h4>
+                <ul>
+                    <li>Fairness</li>
+                    <li>Patience</li>
+                    <li>Sense of humour</li>
+                    <li>Persistence</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="d-flex flex-row justify-content-center">
+        <img src="assets/images/bergen.jpg" alt="Bergen op Zoom" class="mx-3 image-profile-page shadow-lg border">
+        <img src="assets/images/feyenoord-stadion-de-kuip.jpg" alt="De Kuip" class="mx-3 image-profile-page shadow-lg border">
+        <img src="assets/images/stock-teacher.jpg" alt="Meester Stefan"class="mx-3 image-profile-page shadow-lg border">
+    </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
+</body>
+
+</html>
