--- a/dashboard.html
+++ b/dashboard.html
@@ -28,6 +28,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="faq.html">FAQ</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="motivation.html">My Motivation</a>
+            </li>
         </ul>
         </div>
     </nav>
@@ -173,7 +176,7 @@
                             GitHub page</a></li>
                 </ul>
                 <h4>Progress for the year</h4>
-                <p>75% needed to advance to next year.</p>
+                <p>75% <strong>MUST</strong> be achieved in order to advance to next year.</p>
                 <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 20.83%;" aria-valuenow="25"
                         aria-valuemin="0" aria-valuemax="100">20.83%</div>
